# storyestimate

./: .gitignore  Cargo.toml  Makefile  README.md  Vagrantfile  fpm_build.sh
config/: Rocket.toml  storyestimates_nginx.conf
config/nginx/: storyestimates.conf
src/: apikey.rs  auth.rs  cors.rs  errors.rs  foodal.rs  generator.rs  main.rs  proxydata.rs  redisutil.rs  session.rs  user.rs
src/dal/: memory.rs  mod.rs  redis.rs  sharedmemory.rs
src/estimates/: mod.rs
src/estimates/participant/: mod.rs  public.rs
src/estimates/session/: id.rs  mod.rs  public.rs
src/estimates/vote/: mod.rs  public.rs
src/service/: mod.rs
src/service/session/: mod.rs  participant.rs
src/service/user/: mod.rs
src/storypoints/: mod.rs
src/user/: authenticateduser.rs  mod.rs
src/webapp/: apikey.rs  assumejson.rs  cors.rs  errors.rs  filelike.rs  mod.rs  proxydata.rs  swagger.rs
src/webapp/estimates/: mod.rs  participant.rs  session.rs  user.rs
static/: index.html  swagger.yaml
swagger/: spec.yml
swagger-ui/: index.html
systest/: .gitignore  conftest.py  storyestimates.py  test_se.py
templates/: index.html.swaggerui.hbs  swagger.yaml.swaggerspec.hbs
