[package]
name = "estimate"
version = "0.1.0"
authors = ["Scott Schroeder <scott19904@gmail.com>"]

[dependencies]
rocket = "0.2.2"
rocket_codegen = "0.2.2"
log = "0.3"
redis = "0.5.3"
rustc-serialize = "0.3"
error-chain = "0.10.0"
rand = "0.3"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"

[dependencies.rocket_contrib]
version = "0.2.2"
default-features = false
features = ["json"]
