[package]
name = "estimate"
version = "0.1.0"
authors = ["Scott Schroeder <scott19904@gmail.com>"]

[dependencies]
rocket = "0.2.2"
rocket_codegen = "0.2.2"
log = "0.3"
redis = "0.8.0"
rustc-serialize = "0.3"
error-chain = "0.10.0"
rand = "0.3"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
r2d2 = "0.7.1"
r2d2_redis = "0.6.0"
num_cpus = "1.3.0"
hyper = "0.10.5"

[dependencies.rocket_contrib]
version = "0.2.2"
default-features = false
features = ["json"]
